pkg/provider/kubernetes/ingress/fixtures/TLS-support_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  tls:
  - secretName: my-tls-secret
  rules:
  - host: example.com
    http:
      paths:
      - path: ""
        backend:
          service:
            name: example-com
            port:
              number: 80
        pathType: Prefix

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  tls:
  - secretName: my-undefined-secret
  rules:
  - host: example.fail
    http:
      paths:
      - path: ""
        backend:
          service:
            name: example-fail
            port:
              number: 80
        pathType: Prefix
